--- a/cal/build.xml
+++ b/cal/build.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <project default="compile">
 
-    <property name="src.test.dir" location="./test"/>
-    <property name="src.java.dir" location="./src/Calc"/>
+    <property name="src.test.dir" location="./Test"/>
+    <property name="src.java.dir" location="./src/cal"/>
     <property name="result.dir" location="./target"/>
     <property name="result.javaclasses.dir" location="${result.dir}/classes"/>
     <property name="result.testclasses.dir" location="${result.dir}/testclasses"/>
